# sof

scripts/: build-tools.sh
src/arch/host/: CMakeLists.txt
src/audio/: CMakeLists.txt  Kconfig  buffer.c  dai.c  detect_test.c  host.c  kpb.c  mixer.c  mux.c  pipeline.c  selector.c  tone.c
src/audio/asrc/: asrc.c
src/audio/crossover/: crossover.c
src/audio/dcblock/: dcblock.c
src/audio/drc/: drc.c
src/audio/eq_fir/: eq_fir.c
src/audio/eq_iir/: eq_iir.c
src/audio/mux/: mux.c
src/audio/selector/: selector.c
src/audio/smart_amp/: smart_amp.c
src/audio/src/: src.c
src/audio/tdfb/: tdfb.c
src/audio/volume/: volume.c
src/drivers/dw/: dma.c
src/drivers/intel/: dmic.c
src/include/sof/: trace.h
src/ipc/: handler.c
src/samples/audio/: detect_test.c  smart_amp_test.c
src/tasks/: audio.c
tools/: CMakeLists.txt
tools/fuzzer/: CMakeLists.txt  fuzzer.h  main.c  qemu-bridge.c  qemu-bridge.h  topology.c
tools/fuzzer/platform/: apl-host.c  byt-host.c  cavs.h  hda.h  shim.h
tools/testbench/: CMakeLists.txt  topology.c
tools/topology/: CMakeLists.txt  Makefile.am  sof-apl-keyword-detect.m4  sof-byt-codec.m4
tools/topology/m4/: Makefile.am  ch_sel.m4  detect.m4  kpbm.m4  pipeline.m4
tools/topology/sof/: Makefile.am  pipe-dai-playback.m4  pipe-detect.m4  pipe-kfbm-capture.m4  tokens.m4  (+2 more)
tools/topology2/: CMakeLists.txt  build_quirks.sh  cavs-nocodec.conf  get_abi.sh  sof-cnl-nocodec.conf  sof-hda-generic-2ch.conf  sof-hda-generic-4ch.conf  sof-tgl-max98373-rt5682.conf  sof-tgl-sdw-max98373-rt5682-2ch.conf  sof-tgl-sdw-max98373-rt5682-4ch.conf
(+88 files in other folders)
